[tool.poetry]
name = "pypahe"
version = "1.0.0"
description = "pypahe is a PYthon PAckage HElper command-line tool"
license = "GPL-3.0-only"
authors = ["Antoine <achatain@users.noreply.github.com>"]
homepage = "https://bonjour.software"
repository = "https://github.com/bonjoursoftware/pypahe"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.32.4"

[tool.poetry.dev-dependencies]
black = "25.1.0"
flake8 = "7.2.0"
httpretty = "1.1.4"
mypy = "1.16.0"
pytest = "8.4.0"
pytest-cov = "6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
