[tool.poetry]
name = "pypahe"
version = "1.0.0"
description = "pypahe is a PYthon PAckage HElper command-line tool"
license = "GPL-3.0-only"
authors = ["Antoine <achatain@users.noreply.github.com>"]
homepage = "https://bonjour.software"
repository = "https://github.com/bonjoursoftware/pypahe"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.32.5"

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
flake8 = "7.3.0"
httpretty = "1.1.4"
mypy = "1.18.2"
pytest = "8.4.2"
pytest-cov = "7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
