[tool.poetry]
name = "pypahe"
version = "1.0.0"
description = "pypahe is a PYthon PAckage HElper command-line tool"
license = "GPL-3.0-only"
authors = ["Antoine <achatain@users.noreply.github.com>"]
homepage = "https://bonjour.software"
repository = "https://github.com/bonjoursoftware/pypahe"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
requests = "2.32.5"
urllib3 = "2.6.1"

[tool.poetry.group.dev.dependencies]
black = "25.12.0"
flake8 = "7.3.0"
httpretty = "1.1.4"
mypy = "1.19.0"
pytest = "9.0.2"
pytest-cov = "7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
